🐛💄 fix(ui): overflow-x hidden

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -95,6 +95,7 @@
 
   body {
     @apply bg-background text-foreground;
+    overflow-x: hidden;
   }
 }
 
